--- a/src/components/Sidebar/sidebar.css
+++ b/src/components/Sidebar/sidebar.css
@@ -2,75 +2,52 @@
   position: relative;
   background-color: #fff;
   border-right: 1px solid #e9e9e9;
-  width: 290px;
+  width: 350px;
   transition: 0.3s;
-}
-.sidebar.false {
-  width: 90px;
-}
-.sidebar.false .close-icn {
-  display: none;
-}
-.sidebar.false .nsbh h3 {
-  display: none;
-}
-.sidebar.false .links a {
-  justify-content: center;
-  border-radius: 10px;
-}
-.sidebar.false .links a i {
-  font-size: 16px;
-}
-.sidebar.false .links a span {
-  display: none;
-}
-.sidebar.true {
-  width: 290px;
-}
-.sidebar.true .open-icn {
-  display: none;
-}
-.sidebar .open-icn,
-.sidebar .close-icn {
-  position: absolute;
-  right: -21.5px;
-  top: 50%;
-  transform: translateY(-50%);
-  color: #0075ff;
-  padding: 5px 5px 5px 0;
-  background-color: #fff;
-  border-top: 1px solid #e9e9e9;
-  border-right: 1px solid #e9e9e9;
-  border-bottom: 1px solid #e9e9e9;
-  border-top-right-radius: 10px;
-  border-bottom-right-radius: 10px;
-  cursor: pointer;
-  display: none;
-}
-@media (max-width: 991px) {
-  .sidebar .open-icn,
-  .sidebar .close-icn {
-    display: none;
-  }
 }
 .sidebar .nsbh {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  position: relative;
   margin-top: 18px;
-  margin-bottom: 25px;
+  margin-bottom: 30px;
+}
+.sidebar .nsbh::before {
+  content: "";
+  position: absolute;
+  height: 2px;
+  width: calc(100% - 120px);
+  background-color: #333;
+  bottom: -10px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+.sidebar .nsbh::after {
+  content: "";
+  position: absolute;
+  height: 16px;
+  width: 16px;
+  border-radius: 50%;
+  background-color: #fff;
+  border: 2px solid #0075ff;
+  outline: 3px solid #fff;
+  bottom: -16px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .sidebar .nsbh img {
   width: 45px;
   height: 45px;
 }
 .sidebar .nsbh h3 {
-  margin-left: 10px;
+  margin-top: 15px;
   font-weight: bold;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
-  font-size: 25px;
+  font-size: 22px;
 }
 .sidebar .links li a {
   display: flex;
@@ -87,12 +64,10 @@
 }
 .sidebar .links li a:hover {
   background-color: #ededed;
-}
-.sidebar .links li a.active {
   color: #0075ff;
   background-color: rgba(0, 117, 255, 0.1);
 }
-.sidebar .links li a.active span {
+.sidebar .links li a:hover span {
   color: #0075ff;
 }
 .sidebar .links li a span {
@@ -100,4 +75,5 @@
   font-weight: bold;
   color: #777;
   margin-left: 10px;
+  transition: 0.3s;
 }/*# sourceMappingURL=sidebar.css.map */
