--- a/src/components/Sidebar/sidebar.scss
+++ b/src/components/Sidebar/sidebar.scss
@@ -4,72 +4,48 @@
   position: relative;
   background-color: #fff;
   border-right: 1px solid #e9e9e9;
-  width: 290px;
+  width: 350px;
   transition: 0.3s;
-  &.false {
-    width: 90px;
-    .close-icn {
-      display: none;
-    }
-    .nsbh {
-      h3 {
-        display: none;
-      }
-    }
-    .links {
-      a {
-        justify-content: center;
-        border-radius: 10px;
-        i {
-          font-size: 16px;
-        }
-        span {
-          display: none;
-        }
-      }
-    }
-  }
-  &.true {
-    width: 290px;
-    .open-icn {
-      display: none;
-    }
-  }
-  .open-icn,
-  .close-icn {
-    position: absolute;
-    right: -21.5px;
-    top: 50%;
-    transform: translateY(-50%);
-    color: $newBlueColor;
-    padding: 5px 5px 5px 0;
-    background-color: #fff;
-    border-top: 1px solid #e9e9e9;
-    border-right: 1px solid #e9e9e9;
-    border-bottom: 1px solid #e9e9e9;
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-    cursor: pointer;
-    display: none;
-    @media (max-width: 991px) {
-      display: none;
-    }
-  }
   .nsbh {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    position: relative;
     margin-top: 18px;
-    margin-bottom: 25px;
+    margin-bottom: 30px;
+    &::before {
+      content: "";
+      position: absolute;
+      height: 2px;
+      width: calc(100% - 120px);
+      background-color: #333;
+      bottom: -10px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
+    &::after {
+      content: "";
+      position: absolute;
+      height: 16px;
+      width: 16px;
+      border-radius: 50%;
+      background-color: #fff;
+      border: 2px solid $blueColor;
+      outline: 3px solid #fff;
+      bottom: -16px;
+      left: 50%;
+      transform: translateX(-50%);
+    }
     img {
       width: 45px;
       height: 45px;
     }
     h3 {
-      margin-left: 10px;
+      margin-top: 15px;
       font-weight: bold;
       user-select: none;
-      font-size: 25px;
+      font-size: 22px;
     }
   }
   .links {
@@ -88,12 +64,10 @@
         color: $darkGreyColor;
         &:hover {
           background-color: #ededed;
-        }
-        &.active {
-          color: $newBlueColor;
-          background-color: rgba($newBlueColor, 10%);
+          color: $blueColor;
+          background-color: rgba($blueColor, 10%);
           span {
-            color: $newBlueColor;
+            color: $blueColor;
           }
         }
         span {
@@ -101,6 +75,7 @@
           font-weight: bold;
           color: $darkGreyColor;
           margin-left: 10px;
+          transition: 0.3s;
         }
       }
     }
