--- a/src/pages/download-imagery/downloadimagery.scss
+++ b/src/pages/download-imagery/downloadimagery.scss
@@ -4,13 +4,8 @@
 @include sideSection(download-imagery, di-info, items);
 .items {
   .input-field {
-    &:nth-child(2) {
-      gap: 43px;
-    }
-    &:nth-child(3) {
-      input {
-        width: 215px;
-      }
+    &:nth-child(4) {
+      width: calc(100% - 40px) !important;
     }
   }
   .cds {
@@ -20,6 +15,7 @@
     flex-direction: column;
     border-top: 1px solid #ddd;
     padding-bottom: 10px;
+    width: 100%;
     h3 {
       position: relative;
       font-size: 26px;
@@ -47,10 +43,15 @@
       justify-content: center;
       align-items: flex-start;
       flex-direction: column;
+      width: 100%;
       .c-box {
+        width: 100%;
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
+        &:not(:last-of-type) {
+          margin-bottom: 20px;
+        }
         label {
           margin-right: 5px;
           font-weight: bold;
