--- a/src/pages/get-lts/get-lts.css
+++ b/src/pages/get-lts/get-lts.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 .get-lts .glts-info {
-  width: 300px;
+  width: 350px;
   background-color: #fff;
   border-right: 1px solid #e9e9e9;
   transition: 0.3s;
@@ -13,7 +13,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  height: calc(100vh - 216.2px);
+  height: calc(100vh - 218.5px);
   overflow-y: auto;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -21,7 +21,7 @@
   padding-left: 10px;
 }
 .get-lts .glts-info .glts-items::-webkit-scrollbar {
-  width: 5px;
+  width: 6px;
 }
 .get-lts .glts-info .glts-items::-webkit-scrollbar-track {
   background-color: #f1f5f9;
@@ -31,10 +31,7 @@
   background-color: #0075ff;
   border-radius: 0 0 10px 10px;
 }
-
-.input-field:nth-child(1) {
-  gap: 21px;
-}
-.input-field:nth-child(4) {
-  gap: 18px;
+.get-lts .glts-info .glts-items .input-field {
+  width: 100%;
+  justify-content: space-between;
 }/*# sourceMappingURL=get-lts.css.map */
