--- a/src/pages/project-timeseries/project-timeseries.css
+++ b/src/pages/project-timeseries/project-timeseries.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 .project-timeseries .pt-info {
-  width: 300px;
+  width: 350px;
   background-color: #fff;
   border-right: 1px solid #e9e9e9;
   transition: 0.3s;
@@ -13,7 +13,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  height: calc(100vh - 216.2px);
+  height: calc(100vh - 218.5px);
   overflow-y: auto;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -21,7 +21,7 @@
   padding-left: 10px;
 }
 .project-timeseries .pt-info .pt-items::-webkit-scrollbar {
-  width: 5px;
+  width: 6px;
 }
 .project-timeseries .pt-info .pt-items::-webkit-scrollbar-track {
   background-color: #f1f5f9;
@@ -31,14 +31,13 @@
   background-color: #0075ff;
   border-radius: 0 0 10px 10px;
 }
+.project-timeseries .pt-info .pt-items .input-field {
+  width: 100%;
+  justify-content: space-between;
+}
 
-.pt-items .input-field:nth-child(4) {
-  gap: 38px;
-}
-.pt-items .input-field:nth-child(5) {
-  gap: 16px;
-}
 .pt-items .select-field {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -47,9 +46,12 @@
 .pt-items .select-field span {
   color: #191919;
   font-weight: bold;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
 }
 .pt-items .select-field select {
-  padding: 5px;
+  padding: 3px 6px;
   caret-color: #0075ff;
   border: 2px solid transparent;
   border-radius: 10px;
@@ -59,4 +61,7 @@
 }
 .pt-items .select-field select:hover {
   border-color: #0075ff;
+}
+.pt-items .submit-btn {
+  justify-content: space-evenly;
 }/*# sourceMappingURL=project-timeseries.css.map */
