--- a/src/pages/rexm/rexm.css
+++ b/src/pages/rexm/rexm.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 .rexm .rexm-info {
-  width: 300px;
+  width: 350px;
   background-color: #fff;
   border-right: 1px solid #e9e9e9;
   transition: 0.3s;
@@ -13,7 +13,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  height: calc(100vh - 216.2px);
+  height: calc(100vh - 218.5px);
   overflow-y: auto;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -21,7 +21,7 @@
   padding-left: 10px;
 }
 .rexm .rexm-info .rexm-items::-webkit-scrollbar {
-  width: 5px;
+  width: 6px;
 }
 .rexm .rexm-info .rexm-items::-webkit-scrollbar-track {
   background-color: #f1f5f9;
@@ -31,7 +31,14 @@
   background-color: #0075ff;
   border-radius: 0 0 10px 10px;
 }
+.rexm .rexm-info .rexm-items .input-field {
+  width: 100%;
+  justify-content: space-between;
+}
 
-.rexm-items .input-field:nth-child(2) {
-  gap: 43px;
+.rexm-items .input-field:nth-child(4) {
+  width: calc(100% - 70px) !important;
+}
+.rexm-items .submit-btn {
+  justify-content: space-evenly;
 }/*# sourceMappingURL=rexm.css.map */
