--- a/src/pages/rexm/rexm.scss
+++ b/src/pages/rexm/rexm.scss
@@ -4,8 +4,11 @@
 
 .rexm-items {
   .input-field {
-    &:nth-child(2) {
-      gap: 43px;
+    &:nth-child(4) {
+      width: calc(100% - 70px) !important;
     }
+  }
+  .submit-btn {
+    justify-content: space-evenly;
   }
 }
