--- a/src/pages/shoreline-extraction/shoreline-extraction.css
+++ b/src/pages/shoreline-extraction/shoreline-extraction.css
@@ -4,7 +4,7 @@
   display: flex;
 }
 .shoreline-extraction .se-info {
-  width: 300px;
+  width: 350px;
   background-color: #fff;
   border-right: 1px solid #e9e9e9;
   transition: 0.3s;
@@ -13,7 +13,7 @@
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  height: calc(100vh - 216.2px);
+  height: calc(100vh - 218.5px);
   overflow-y: auto;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -21,7 +21,7 @@
   padding-left: 10px;
 }
 .shoreline-extraction .se-info .se-items::-webkit-scrollbar {
-  width: 5px;
+  width: 6px;
 }
 .shoreline-extraction .se-info .se-items::-webkit-scrollbar-track {
   background-color: #f1f5f9;
@@ -31,19 +31,11 @@
   background-color: #0075ff;
   border-radius: 0 0 10px 10px;
 }
+.shoreline-extraction .se-info .se-items .input-field {
+  width: 100%;
+  justify-content: space-between;
+}
 
-.se-items .input-field:nth-child(1) label {
-  margin-right: 15px;
-}
-.se-items .input-field:nth-child(2) label {
-  margin-right: 31px;
-}
-.se-items .input-field:nth-child(3) label {
-  margin-right: 60px;
-}
-.se-items .input-field:nth-child(4) label {
-  margin-right: 24px;
-}
-.se-items .input-field:nth-child(6) label {
-  margin-right: 26.8px;
+.se-items .input-field:nth-child(5), .se-items .input-field:nth-child(6) {
+  width: calc(100% - 80px) !important;
 }/*# sourceMappingURL=shoreline-extraction.css.map */
