--- a/src/scss/mixins/_sidesection.scss
+++ b/src/scss/mixins/_sidesection.scss
@@ -6,7 +6,7 @@
     background-color: #f1f5f9;
     display: flex;
     .#{$infoClass} {
-      width: 300px;
+      width: 350px;
       background-color: #fff;
       border-right: 1px solid #e9e9e9;
       transition: 0.3s;
@@ -14,14 +14,14 @@
         display: flex;
         align-items: flex-start;
         flex-direction: column;
-        height: calc(100vh - 216.2px);
+        height: calc(100vh - 218.5px);
         overflow-y: auto;
         padding-top: 20px;
         padding-bottom: 20px;
         padding-right: 10px;
         padding-left: 10px;
         &::-webkit-scrollbar {
-          width: 5px;
+          width: 6px;
           &-track {
             background-color: #f1f5f9;
             border-radius: 0 0 10px 10px;
@@ -30,6 +30,10 @@
             background-color: $blueColor;
             border-radius: 0 0 10px 10px;
           }
+        }
+        .input-field {
+          width: 100%;
+          justify-content: space-between;
         }
       }
     }
