--- a/src/pages/download-imagery/downloadimagery.css
+++ b/src/pages/download-imagery/downloadimagery.css
@@ -2,6 +2,7 @@
   min-height: calc(100vh - 150px);
   background-color: #f1f5f9;
   display: flex;
+  position: relative;
 }
 .download-imagery .di-info {
   width: 350px;
@@ -34,6 +35,72 @@
 .download-imagery .di-info .items .input-field {
   width: 100%;
   justify-content: space-between;
+}
+
+.download-imagery .di-overlay.true {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 9999;
+  background-color: rgba(25, 25, 25, 0.3);
+}
+.download-imagery .di-popup.false {
+  display: none;
+}
+.download-imagery .di-popup.true {
+  position: absolute;
+  width: 50%;
+  height: 98%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  border-radius: 6px;
+  z-index: 10000;
+  display: flex;
+  flex-direction: column;
+}
+.download-imagery .di-popup.true .cls-btn-div {
+  display: flex;
+  justify-content: flex-end;
+  width: 100%;
+}
+.download-imagery .di-popup.true .cls-btn-div .cls-btn {
+  margin: 5px 10px 0 0;
+  padding: 15px;
+  background-color: rgba(244, 67, 54, 0.3);
+  border-radius: 10px;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+.download-imagery .di-popup.true .imgs-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+.download-imagery .di-popup.true .imgs-box .img-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+  background-color: #eeeeee;
+  border-radius: 6px;
+  padding: 15px;
+}
+.download-imagery .di-popup.true .imgs-box .img-box .ib {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 30px;
 }
 
 .items .input-field:nth-child(4) {
