--- a/src/pages/download-imagery/downloadimagery.scss
+++ b/src/pages/download-imagery/downloadimagery.scss
@@ -2,6 +2,74 @@
 @use "../../scss/mixins/sidesection" as *;
 
 @include sideSection(download-imagery, di-info, items);
+.download-imagery {
+  .di-overlay {
+    &.true {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      left: 0;
+      top: 0;
+      z-index: 9999;
+      background-color: rgba($darkColor, 0.3);
+    }
+  }
+  .di-popup {
+    &.false {
+      display: none;
+    }
+    &.true {
+      position: absolute;
+      width: 50%;
+      height: 98%;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      background-color: #fff;
+      border-radius: 6px;
+      z-index: 10000;
+      display: flex;
+      flex-direction: column;
+      .cls-btn-div {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+        .cls-btn {
+          margin: 5px 10px 0 0;
+          padding: 15px;
+          background-color: rgba($redColor, 0.3);
+          border-radius: 10px;
+          cursor: pointer;
+          user-select: none;
+          width: fit-content;
+        }
+      }
+      .imgs-box {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        flex-wrap: wrap;
+        .img-box {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+          gap: 10px;
+          background-color: $lightGreyColor;
+          border-radius: 6px;
+          padding: 15px;
+          .ib {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 30px;
+          }
+        }
+      }
+    }
+  }
+}
 .items {
   .input-field {
     &:nth-child(4) {
