--- a/src/pages/make-transects/make-transects.css
+++ b/src/pages/make-transects/make-transects.css
@@ -2,6 +2,7 @@
   min-height: calc(100vh - 150px);
   background-color: #f1f5f9;
   display: flex;
+  position: relative;
 }
 .make-transects .mt-info {
   width: 350px;
