--- a/src/pages/merge-projections/merge-projections.css
+++ b/src/pages/merge-projections/merge-projections.css
@@ -2,6 +2,7 @@
   min-height: calc(100vh - 150px);
   background-color: #f1f5f9;
   display: flex;
+  position: relative;
 }
 .merge-projections .mp-info {
   width: 350px;
