--- a/src/scss/mixins/_sidesection.scss
+++ b/src/scss/mixins/_sidesection.scss
@@ -5,6 +5,7 @@
     min-height: calc(100vh - 150px);
     background-color: #f1f5f9;
     display: flex;
+    position: relative;
     .#{$infoClass} {
       width: 350px;
       background-color: #fff;
